--- a/index.html
+++ b/index.html
@@ -66,6 +66,61 @@ body {
 //WEBVR_PREDICTION_TIME_MS = 100;
 </script>
 
+<script id="vs" type="x-shader/x-vertex">
+
+  uniform sampler2D map;
+
+  uniform float width;
+  uniform float height;
+  uniform float nearClipping, farClipping;
+
+  uniform float pointSize;
+  uniform float zOffset;
+
+  varying vec2 vUv;
+
+  const float XtoZ = 1.11146; // tan( 1.0144686 / 2.0 ) * 2.0;
+  const float YtoZ = 0.83359; // tan( 0.7898090 / 2.0 ) * 2.0;
+
+  void main() {
+
+    vUv = vec2( position.x / width, position.y / height );
+
+    vec4 color = texture2D( map, vUv );
+    float depth = ( color.r + color.g + color.b ) / 3.0;
+
+    // Projection code by @kcmic
+
+    float z = ( 1.0 - depth ) * (farClipping - nearClipping) + nearClipping;
+
+    vec4 pos = vec4(
+      ( position.x / width - 0.5 ) * z * XtoZ,
+      ( position.y / height - 0.5 ) * z * YtoZ,
+      - z + zOffset,
+      1.0);
+
+    gl_PointSize = pointSize;
+    gl_Position = projectionMatrix * modelViewMatrix * pos;
+
+  }
+
+</script>
+
+<script id="fs" type="x-shader/x-fragment">
+
+  uniform sampler2D map;
+
+  varying vec2 vUv;
+
+  void main() {
+
+    vec4 color = texture2D( map, vUv );
+    gl_FragColor = vec4( color.r, color.g, color.b, 0.2 );
+
+  }
+
+</script>
+
 <script>
 //Setup three.js WebGL renderer
 var renderer = new THREE.WebGLRenderer({ antialias: true });
@@ -90,40 +145,61 @@ effect.setSize(window.innerWidth, window.innerHeight);
 // Create a VR manager helper to enter and exit VR mode.
 var manager = new WebVRManager(renderer, effect, {hideButton: false});
 
-// Create 3D objects.
-var geometry = new THREE.BoxGeometry(0.5, 0.5, 0.5);
-var material = new THREE.MeshNormalMaterial();
-var cube = new THREE.Mesh(geometry, material);
+var video = document.createElement( 'video' );
+video.addEventListener( 'loadedmetadata', function ( event ) {
 
-// Position cube mesh
-cube.position.z = -1;
+  var texture = new THREE.VideoTexture( video );
+  texture.minFilter = THREE.NearestFilter;
 
-// Add cube mesh to your three.js scene
-scene.add(cube);
+  var width = 640, height = 480;
+  var nearClipping = 850, farClipping = 4000;
 
-// Also add a repeating grid as a skybox.
-var boxWidth = 10;
-var texture = THREE.ImageUtils.loadTexture(
-  'img/box.png'
-);
-texture.wrapS = THREE.RepeatWrapping;
-texture.wrapT = THREE.RepeatWrapping;
-texture.repeat.set(boxWidth, boxWidth);
+  geometry = new THREE.BufferGeometry();
 
-var geometry = new THREE.BoxGeometry(boxWidth, boxWidth, boxWidth);
-var material = new THREE.MeshBasicMaterial({
-  map: texture,
-  color: 0x333333,
-  side: THREE.BackSide
-});
+  var vertices = new Float32Array( width * height * 3 );
 
-var skybox = new THREE.Mesh(geometry, material);
-scene.add(skybox);
+  for ( var i = 0, j = 0, l = vertices.length; i < l; i += 3, j ++ ) {
+
+    vertices[ i ] = j % width;
+    vertices[ i + 1 ] = Math.floor( j / width );
+
+  }
+
+  geometry.addAttribute( 'position', new THREE.BufferAttribute( vertices, 3 ) );
+
+  material = new THREE.ShaderMaterial( {
+
+    uniforms: {
+
+      "map": { type: "t", value: texture },
+      "width": { type: "f", value: width },
+      "height": { type: "f", value: height },
+      "nearClipping": { type: "f", value: nearClipping },
+      "farClipping": { type: "f", value: farClipping },
+
+      "pointSize": { type: "f", value: 2 },
+      "zOffset": { type: "f", value: 1000 }
+
+    },
+    vertexShader: document.getElementById( 'vs' ).textContent,
+    fragmentShader: document.getElementById( 'fs' ).textContent,
+    blending: THREE.AdditiveBlending,
+    depthTest: false, depthWrite: false,
+    transparent: true
+
+  } );
+
+  mesh = new THREE.Points( geometry, material );
+  scene.add( mesh );
+},  false);
+
+video.loop = true;
+video.src = 'videos_src/kinect.webm';
+video.play();
 
 // Request animation frame loop function
 function animate(timestamp) {
   // Apply rotation to cube mesh
-  cube.rotation.y += 0.01;
 
   // Update VR headset position and apply to camera.
   controls.update();
